# audio_io

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pubspec.yaml  test_buffer.dart
.github/workflows/: deploy-web-demo.yml  xctest.yml
android/: CMakeLists.txt  build.gradle
android/src/main/kotlin/com/wearemobilefirst/audio_io/: AudioIoPlugin.kt
doc/: design-pcm16-streaming.md
docs/: design-pcm16-streaming.md
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Flutter/ephemeral/: flutter_native_integration.env
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  passthrough_screen.dart  sine_wave_screen.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
example_gemini_live/: .gitignore  README.md  pubspec.yaml
example_gemini_live/android/app/: build.gradle.kts
example_gemini_live/android/app/src/main/: AndroidManifest.xml
example_gemini_live/ios/Runner/: AppDelegate.swift  Info.plist
example_gemini_live/ios/Runner.xcodeproj/: project.pbxproj
example_gemini_live/lib/: main.dart
example_gemini_live/macos/Runner/: AppDelegate.swift  Info.plist
example_gemini_live/macos/Runner.xcodeproj/: project.pbxproj
example_gemini_live/macos/Runner/Configs/: AppInfo.xcconfig
example_gemini_live/web/: index.html  manifest.json
ios/: audio_io.podspec
ios/Classes/: AudioIoPlugin.h  AudioIoPlugin.m  AudioOutputRing.swift  RingBuffer.swift  SwiftAudioIoPlugin.swift
ios/audio_io/: Package.swift
ios/audio_io/Sources/audio_io/: AudioInputRing.swift  AudioOutputRing.swift  SwiftAudioIoPlugin.swift
lib/: audio_io.dart  audio_io_web.dart
lib/src/: audio_io_apple.dart  audio_io_errors.dart  audio_io_exception.dart  audio_io_input_source.dart  audio_io_native.dart  audio_io_stub.dart  audio_io_threading.dart  audio_io_web.dart  output_buffer_math.dart  output_ring.dart  pcm16_adapters.dart  pcm16_codec.dart  push_resampler.dart
lib/src/ffi/: audio_io_apple_ffi.dart  audio_io_apple_isolate.dart  audio_io_bindings.dart  audio_io_ffi.dart  audio_io_isolate.dart
lib/src/web/: audio_io_web.dart
linux/: CMakeLists.txt  audio_io_plugin.cc
linux/include/audio_io/: audio_io_plugin.h
macos/: audio_io.podspec
macos/Classes/: AudioIoPlugin.swift  AudioOutputRing.swift  RingBuffer.swift
macos/audio_io/: Package.swift
macos/audio_io/Sources/audio_io/: AudioInputRing.swift  AudioIoPlugin.swift  AudioOutputRing.swift
src/: audio_io_miniaudio.cpp
test/: android_ffi_test.dart  asymmetric_sample_rate_test.dart  audio_io_apple_test.dart  audio_io_config_test.dart  audio_io_config_validation_test.dart  audio_io_input_source_reset_test.dart  audio_io_lifecycle_test.dart  audio_io_test.dart  input_source_test.dart  output_buffer_config_test.dart  output_ring_test.dart  pcm16_codec_test.dart  push_resampler_test.dart  ring_buffer_test.dart  web_input_source_test.dart  web_resampling_test.dart
web/: build_wasm.sh
windows/: CMakeLists.txt  audio_io_plugin.cpp
windows/include/audio_io/: audio_io_plugin.h
(+3 files in other folders)
